--- a/config
+++ b/config
@@ -345,7 +345,7 @@ templdir /system/etc/privoxy/templates
 #
 #      No trailing "/", please.
 #
-logdir .
+logdir /data/local/tmp
 #
 #  2.5. actionsfile
 #  =================
@@ -478,7 +478,7 @@ filterfile user.filter      # User customizations
 #      require additional software to do it. For details, please
 #      refer to the documentation for your operating system.
 #
-logfile logfile
+logfile privoxy.log
 #
 #  2.8. trustfile
 #  ===============
